objects/Job_Match__c.object
<CustomObject>
    <description>Matches based on requirements and job seeker criteria</description>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Job_Posting__r.Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Posted__c</fullName>
        <formula>Job_Posting__r.Date_of_Posting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Feedback__c</fullName>
        <label>Employer Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>not qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>compensation inadequate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>unprofessional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>unprepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not right fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tech experience inadequate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>education institution unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>outdated skills</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The alumni is interested in this job.</description>
        <inlineHelpText>Check box if you are interested in this job.</inlineHelpText>
        <label>Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Posting__c</fullName>
        <label>Job Posting</label>
        <referenceTo>Job_Posting__c</referenceTo>
        <relationshipLabel>Job Matches</relationshipLabel>
        <relationshipName>Job_Matches</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Seeker__c</fullName>
        <label>Job Seeker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Matches</relationshipLabel>
        <relationshipName>Job_Matches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Job_Posting__r.Job_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_interested__c</fullName>
        <description>Reason not interested in this match.</description>
        <label>Not interested</label>
        <picklist>
            <picklistValues>
                <fullName>not qualified,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>distance too far,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>compensation not adequate,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hours not enough,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>company not a good fit,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>work-life balance doesn&apos;t fit,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>offered better job,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no longer looking,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inadequate benefits,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other reasons</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Percent_Match__c</fullName>
        <label>Percent Match</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Not interested
waiting for a call back
No transportation
hours offered
benefits
salary compensation
not the fit fit in company culture</description>
        <inlineHelpText>What stage are you in you r job search</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Callback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upsert_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Upsert Key</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Job Match</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Company__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Job_Posting__c</columns>
        <columns>Job_Seeker__c</columns>
        <columns>Interested__c</columns>
        <columns>Date_Posted__c</columns>
        <columns>NAME</columns>
        <columns>Percent_Match__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Match-{00000}</displayFormat>
        <label>Job Match Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Matches</pluralLabel>
    <recordTypes>
        <fullName>Other_reasons_not_interested</fullName>
        <active>true</active>
        <label>Other reasons not interested</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>